--- a/scalaApp/app/views/main.scala.html
+++ b/scalaApp/app/views/main.scala.html
@@ -10,6 +10,14 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+    
+    	<nav>
+    		<ul>
+    			<li><a href="@routes.Application.cats">Cats</a></li>
+    			<li><a href="@routes.Application.newCat()">Add a new cat</a></li>
+    		</ul>
+    	</nav>
+    
         @content
     </body>
 </html>
