--- a/scalaApp/app/assets/stylesheets/styles.less
+++ b/scalaApp/app/assets/stylesheets/styles.less
@@ -1,6 +1,25 @@
 body {
 	
 	background: #e8e8e8;
-	margin: 20px 30px;
+	
+	nav {
+		background: black;
+		padding: 10px;
+		
+		ul {
+			margin: 0;
+			padding: 0;
+			li {
+				display: inline;
+				margin-right: 15px;
+			}
+		}
+	}
+	
+	div.content {
+		margin: 20px 40px;
+	
+	}
 }
+
 
