--- a/scalaApp/app/views/main.scala.html
+++ b/scalaApp/app/views/main.scala.html
@@ -5,10 +5,15 @@
 <html>
     <head>
         <title>@title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("javascripts/bootstrap/css/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/styles.css")">
+        
 
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+
     </head>
     <body>
     
@@ -18,7 +23,12 @@
     			<li><a href="@routes.Application.newCat()">Add a new cat</a></li>
     		</ul>
     	</nav>
-    
-        @content
+    	
+    	<div class="content">
+        	@content
+        </div>
+        
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
     </body>
 </html>
